--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ APP_SECRET=9056ae1014b234691ffd0865c85e1a79
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="mysql://root:@127.0.0.1:3306/arcadia?serverVersion=8.3.0&charset=utf8mb4"
-DATABASE_URL="mysql://myuser:mypassword@arcadia-server.mysql.database.azure.com:3306/arcadia-database?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/arcadia?serverVersion=8.3.0&charset=utf8mb4"
+# DATABASE_URL="mysql://myuser:mypassword@arcadia-server.mysql.database.azure.com:3306/arcadia-database?serverVersion=8.0&charset=utf8mb4"
 
 ###< doctrine/doctrine-bundle ###
 
@@ -40,5 +40,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://arcadia.proinfo@gmail.com:Arcadia15987@smtp.gmail.com:587
 ###< symfony/mailer ###
