--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://arcadia.proinfo@gmail.com:Arcadia15987@smtp.gmail.com:587
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
